[package]
name = "cloudsay"
version = "0.2.5"
authors = ["Spaceface16518 <33424649+Spaceface16518@users.noreply.github.com>"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.3"
smallvec = "0.6"
actix-web = "0.7"
serde = { version = "1.0", features = ["derive"] }
hashbrown = "0.1"
lazy_static = "1.2"
